feat: created vote and chart page

--- a/src/app/pages/poll/poll.component.html
+++ b/src/app/pages/poll/poll.component.html
@@ -1,1 +1,28 @@
-<p>poll works!</p>
+<div class="poll">
+  <div class="poll__form">
+    <h1>{{ poll?.name ?? 'Cargando...' }}</h1>
+    <p>{{ poll?.description ?? "No hay descripción" }}</p>
+    <h2>¡Vota <span>ahora</span>!</h2>
+    <form [formGroup]="voteForm">
+      <mat-form-field appearance="outline">
+        <mat-label>Tu nombre</mat-label>
+        <input placeholder="Nombre" matInput formControlName="name" />
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Opciones</mat-label>
+        <mat-select formControlName="option">
+          <mat-select-trigger>{{
+            voteForm.controls.option.value | idToOption : poll?.options ?? []
+          }}</mat-select-trigger>
+          <mat-option *ngFor="let option of poll?.options" [value]="option.id">
+            {{option.title}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </form>
+    <button mat-button>Votar</button>
+  </div>
+  <div class="poll__info">
+    <canvas id="chart"></canvas>
+  </div>
+</div>
