--- a/src/app/pages/poll/poll.component.scss
+++ b/src/app/pages/poll/poll.component.scss
@@ -2,29 +2,44 @@
   padding: 12px;
   display: flex;
   flex-direction: column;
+  @media (min-width: 900px) {
+    flex-direction: row;
+    justify-content: center;
+    & > div {
+      width: 100%;
+    }
+  }
+
+  h2 {
+    & > span {
+      color: lightsalmon;
+    }
+    margin-bottom: 8px;
+  }
 
   &__form {
-
     & > h1 {
       color: lightsalmon;
       margin-bottom: 8px;
     }
 
-    & > h2 {
-      & > span {
-        color: lightsalmon;
+    & > div {
+
+
+      & > form {
+        display: flex;
+        flex-direction: column;
       }
-      margin-bottom: 8px;
-    }
 
-    & > form {
-      display: flex;
-      flex-direction: column;
+      & > button {
+        color: white;
+        background-color: lightsalmon;
+      }
     }
+  }
 
-    & > button {
-      color: white;
-      background-color: lightsalmon;
-    }
+  &__info {
+    display: flex;
+    justify-content: center;
   }
 }
